atualização do css

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
                                     <li>Segurança: Transações seguras e suporte dedicado para garantir uma experiência tranquila.</li>
                                     <li>Variedade de Talentos: Acesse uma ampla gama de habilidades e expertise.</li>
                                 </ul>
+
+                            <div class="bnt-txt">
+                                <a href="#"><button class="bnt-txt-1">Contratar um Freelancer</button></a><!--txt-bnt-->
+                                <a href="#"><button class="bnt-txt-2">Trabalhar como Freelancer</button></a><!--txt-bnt-->
+                            </div><!--bdn-txt-->
                         </div><!--txt-topo-site-->
-                        <div class="bnt-txt">
-                            <a href="#"><button class="bnt-txt-1">Contratar um Freelancer</button></a><!--txt-bnt-->
-                            <a href="#"><button class="bnt-txt-2">Trabalhar como Freelancer</button></a><!--txt-bnt-->
-                        </div><!--bdn-txt-->
                         <div class="img-topo-do-site">
                             <img src="#" alt="imagem lateral ou de fundo"/>
                         </div><!---img-topo-do-site-->
@@ -80,7 +81,7 @@
 
             <section class="txt-2">
                 <div class="interface">
-                    <h2>Encontre ou Seja um <span>Freelancer!</span></h2>
+                    <h2>Encontre ou Seja um <span>Freelancer</span></h2>
                     <div class="flex">
                         <div class="txt-box">
                             <h3>Transforme Seu Negócio com Freelancers</h3>
@@ -99,7 +100,7 @@
 
                         <div class="txt-box">
                             <h3>Encontre o Freelancer Ideal para Seu Projeto</h3>
-                            <p>Nossa plataforma é o ponto de encontro entre empresas e freelancers talentosos. Economize tempo e recursos encontrando o profissional perfeito para suas necessidades. Seja para projetos curtos ou de longo prazo, temos a solução ideal para você.</p>
+                            <p>Nossa plataforma é o ponto de encontro entre empresas e freelancers talentosos. Economize tempo e recursos encontrando o profissional perfeito para suas necessidades. Seja para projetos curtos ou de longo prazo, temos a solução ideal.</p>
                         </div><!--txt-box-->
 
                     </div><!--flex-->
