--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Freelancer Company</title>
         <link rel="shortcut icon" type="image/jpg" href="./img/icone.png"/>
 
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <header class="menu-principal">
