--- a/pagerro.html
+++ b/pagerro.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="#">Dev.</a>
+            <a class="logo" href="#"></a>
             <Ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Ajuda</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
             </Ul>
         </nav>
     </header>
@@ -22,8 +22,8 @@
         <section class="section">
             <div class="left">
                 <p>Erro 404</p>
-                <h4>Caiu net</h4>
-                <a href="#" class="btn">Home</a>
+                <h4>Desculpe, página não encontrada.</h4>
+                <a href="#" class="btn">Recarregar</a>
             </div>
             <div class="right">
                 <img src="/Imgs/WhatsApp_Image_2024-08-29_at_01.06.37-removebg.png" alt="Imagem de erro 404">
