--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="footer-1">
                     <div class="flex">
                         <div class="logo-footer">
-                            <img src="" alt="Dev Hunt"/>
+                            <img src="/img/logo.png" alt="Dev Hunt"/>
                         </div><!--logo-footer-->
 
                         <div class="bnt-redes">
