--- a/pagerro.html
+++ b/pagerro.html
@@ -149,7 +149,7 @@
                 <a href="#" class="btn">Recarregar</a>
             </div>
             <div class="right">
-                <img src="/Imgs/WhatsApp_Image_2024-08-29_at_01.06.37-removebg.png" alt="Imagem de erro 404">
+                <img src="/img/astronauta.png" alt="Imagem de erro 404">
                 <div class="shadow"></div>
             </div>
                     
