atualização dapágina inicial

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Dev Hunt</title>
         <link rel="shortcut icon" type="image/jpg" href="./img/icone.png"/>
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
@@ -81,21 +83,21 @@
 
             <section class="txt-2">
                 <div class="interface">
-                    <h2>Encontre ou Seja um <span>Freelancer</span></h2>
+                    <h1>Encontre ou seja um <span>Freelancer</span></h1>
                     <div class="flex">
                         <div class="txt-box">
                             <h3>Transforme Seu Negócio com Freelancers</h3>
-                            <p>Encontre profissionais autônomos especializados para impulsionar seus projetos. Nossa plataforma facilita a conexão entre empresas e freelancers, garantindo qualidade e eficiência. Seja você uma empresa buscando talentos ou um profissional em busca de flexibilidade, aqui é o lugar certo!</p>
+                            <p>Dê um novo impulso ao seu negócio conectando-se com talentos especializados. Nossa plataforma oferece acesso a uma rede de profissionais que podem trazer inovação e crescimento para sua empresa. Ao unir negócios com freelancers de alta qualidade, você pode transformar projetos em sucessos.</p>
                         </div><!--txt-box-->
 
                         <div class="txt-box">
                             <h3>Oportunidades Flexíveis para Freelancers</h3>
-                            <p>Descubra a liberdade de trabalhar como freelancer! Nossa plataforma oferece diversas oportunidades para profissionais autônomos em diferentes áreas. Conecte-se com empresas que valorizam seu talento e construa uma carreira flexível e gratificante.</p>
+                            <p>Encontre a liberdade de construir a carreira dos seus sonhos. Nossa plataforma oferece uma ampla variedade de projetos em diversas áreas, permitindo que você escolha como e onde trabalhar. Histórias de sucesso mostram como freelancers alcançaram novos patamares de realização pessoal e profissional.</p>
                         </div><!--txt-box-->
 
                         <div class="txt-box">
                             <h3>Contrate Talentos de Forma Simples e Segura</h3>
-                            <p> Precisa de um especialista para um projeto específico? Nossa plataforma conecta você aos melhores freelancers do mercado. Com um processo simples e seguro, você pode contratar profissionais qualificados e focar no crescimento do seu negócio.</p>
+                            <p>Simplifique a contratação de especialistas para seus projetos. Nossa plataforma garante um processo seguro e eficiente, com suporte em todas as etapas. Concentre-se no crescimento do seu negócio enquanto nós cuidamos de conectar você com os profissionais certos.</p>
                         </div><!--txt-box-->
 
                         <div class="txt-box">
@@ -111,13 +113,13 @@
                 <div class="interface">
                     <div class="flex">
                         <div class="serv-box">
-                            <img src="" alt="empresa"/>
+                            <i class="bi bi-briefcase-fill"></i>
                             <p>Quero elaborar um projeto</p>
                             <h3>Empresas</h3>
                         </div><!--serv-box-->
 
                         <div class="serv-box">
-                            <img src="" alt="freelancer"/>
+                            <i class="bi bi-code-square"></i>
                             <p>Quero fazer parte de um projeto</p>
                             <h3>Freelancers</h3>
                         </div><!--serv-box-->
@@ -144,31 +146,31 @@
                     <div class="flex">
 
                         <div class="depoimentos-box">
-                            <img src="" alt="foto">
-                            <h4>Rebeca</h4>
+                            <img src="/img/1.jpg" alt="foto">
+                            <h4>Carlos</h4>
                             <p>“Trabalhar com a <span>Dev Hunt</span> foi uma experiência incrível. Eles entenderam exatamente o que eu precisava e entregaram um trabalho de alta qualidade dentro do prazo. Recomendo fortemente seus serviços!”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="" alt="foto">
-                            <h4>Carlos</h4>
+                            <img src="/img/2.jpg" alt="foto">
+                            <h4>Rebeca</h4>
                             <p>“Desde que comecei a colaborar com a <span>Dev Hunt</span>, minha carreira como freelancer decolou. Eles me conectaram com clientes incríveis e projetos desafiadores que me ajudaram a crescer profissionalmente.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="" alt="foto">
-                            <h4>Bruna</h4>
+                            <img src="/img/3.jpg" alt="foto">
+                            <h4>Pedro</h4>
                             <p> “A flexibilidade e o suporte oferecidos pela <span>Dev Hunt</span> são incomparáveis. Eles sempre estão disponíveis para ajudar e garantir que eu tenha tudo o que preciso para realizar meu trabalho da melhor forma possível.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="" alt="foto">
-                            <h4>Pedro</h4>
+                            <img src="/img/4.jpg" alt="foto">
+                            <h4>Bruna</h4>
                             <p>“Graças ao trabalho com  a <span>Dev Hunt</span>, consegui alcançar uma independência financeira que nunca imaginei ser possível. Agora, posso focar em projetos que realmente me apaixonam e ainda ter tempo para minha família.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="" alt="foto">
+                            <img src="/img/5.jpg" alt="foto">
                             <h4>Henrique</h4>
                             <p>“A qualidade e o profissionalismo da <span>Dev Hunt</span> são excepcionais. Cada projeto é tratado com o máximo cuidado e atenção aos detalhes, resultando em entregas que superam as expectativas.”</p>
                         </div><!--depoimentos-box-->
@@ -180,28 +182,34 @@
             <section class="planos">
                 <div class="interface">
                     <h2>Transformando vidas e carreiras através de parcerias de sucesso.</h2>
-                    <p>Descubra como revolucionar sua trajetória profissional. Com acesso a uma rede exclusiva de oportunidades, suporte especializado e ferramentas avançadas, você estará preparado para alcançar novos patamares. Invista no seu futuro e transforme seus sonhos em realidade. Contrate agora e veja a diferença!</p>
+                    <p>Descubra como revolucionar sua trajetória profissional com acesso a uma rede exclusiva de oportunidades, suporte especializado e ferramentas avançadas. Invista no seu futuro e transforme seus sonhos em realidade. Contrate agora e veja a diferença!</p>
                     <div class="flex">
-                        <div class="p-empresa">
+                        <div class="p-planos">
                             <h3>Plano Empresa</h3>
-                                <h4>R$ 00,00</h4>
+                                <h4>R$ 49,99</h4>
                                 <ul>
-                                    <li>vantagem</li>
-                                    <li>vantagem</li>
-                                    <li>vantagem</li>
+                                    <li>Acesso a Talentos Qualificados: Perfis impulsionados geralmente pertencem a freelancers experientes e bem avaliados, facilitando a contratação de profissionais de alta qualidade.</li>
+                                    <li>Economia de Tempo: Com freelancers destacados, a empresa pode encontrar rapidamente os candidatos ideais sem passar por dezenas de perfis medianos.</li>
+                                    <li>Maior Garantia de Entrega: Freelancers que investem em seus perfis estão mais comprometidos, o que aumenta as chances de entregas pontuais e de qualidade.</li>
+                                    <li>Filtragem Avançada: Planos premium podem incluir filtros adicionais para refinar a busca, como habilidades específicas ou faixa de preço, otimizando o processo de seleção.</li>
+                                    <li>Suporte Prioritário: Empresas que utilizam planos avançados recebem suporte prioritário, garantindo que qualquer problema na plataforma seja resolvido rapidamente.</li>
+                                    <li>Relatórios e Insights: Com planos empresariais, você pode ter acesso a relatórios detalhados sobre os freelancers contatados e contratados, ajudando a aprimorar futuras buscas.</li>
                                 </ul>
                                     <div class="bnt-planos">
                                         <a href="#"><button>Contratar</button></a>
                                     </div><!--bnt-planos-->
                         </div><!--p-empresa-->
         
-                        <div class="p-freelancer">
+                        <div class="p-planos">
                             <h3>Plano Freelancer</h3>
-                                <h4>R$ 00,00</h4>
+                                <h4>R$ 24,99</h4>
                                 <ul>
-                                    <li>vantagem</li>
-                                    <li>vantagem</li>
-                                    <li>vantagem</li>
+                                    <li>Maior Visibilidade: Ao impulsionar seu perfil, você aparece no topo das buscas, aumentando suas chances de ser notado por clientes em potencial.</li>
+                                    <li>Acesso Prioritário a Projetos: Com um plano avançado, você tem acesso antecipado aos novos projetos postados, permitindo que envie propostas antes dos concorrentes.</li>
+                                    <li>Credibilidade Aumentada: Perfis impulsionados geralmente incluem selos ou marcas de verificação, transmitindo maior confiança aos clientes.</li>
+                                    <li>Mais Convites Diretos: Ao ter seu perfil em destaque, você receberá mais convites diretos para projetos, reduzindo o tempo gasto em buscas ativas.</li>
+                                    <li>Ferramentas Exclusivas: Planos pagos frequentemente oferecem ferramentas adicionais, como analytics, que ajudam a monitorar seu desempenho e ajustar sua estratégia.</li>
+                                    <li>Apoio e Suporte Personalizado: Com um plano premium, você tem acesso a suporte prioritário, garantindo que qualquer problema seja resolvido rapidamente.</li>
                                 </ul>
                                     <div class="bnt-planos">
                                         <a href="#"><button>Contratar</button></a>
@@ -250,15 +258,15 @@
                         </div><!--logo-footer-->
 
                         <div class="bnt-redes">
-                            <a href="#"><button><img src="#" alt="Instagram"></button></a>
-                            <a href="#"><button><img src="#" alt="Facebook"></button></a>
-                            <a href="#"><button><img src="#" alt="Linkdin"></button></a>
+                            <a href="#"><i class="bi bi-instagram"></i></a>
+                            <a href="#"><i class="bi bi-facebook"></i></a>
+                            <a href="#"><i class="bi bi-linkedin"></i></a>
                         </div><!--bnt-redes-->
                     </div><!--flex-->
                 </div><!--footer-1-->
 
                 <div class="footer-2">
-                    <p><img src="" alt="email"><a href="mailto:contato@devhunt.com.br"> contato@devhunt.com.br</a></p>
+                    <p><i class="bi bi-envelope"></i><a href="mailto:contato@devhunt.com.br"> contato@devhunt.com.br</a></p>
                     <p class="desc">© 2024 devhunt.com.br | Todos os direitos reservados.</p>
                 </div><!--footer-2-->
             </div><!--interface-->
