página inicial pronta / faltando poucas alterações

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="/img/3.jpg" alt="foto">
+                            <img src="/img/4.jpg" alt="foto">
                             <h4>Pedro</h4>
                             <p> “A flexibilidade e o suporte oferecidos pela <span>Dev Hunt</span> são incomparáveis. Eles sempre estão disponíveis para ajudar e garantir que eu tenha tudo o que preciso para realizar meu trabalho da melhor forma possível.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="/img/4.jpg" alt="foto">
+                            <img src="/img/3.jpg" alt="foto">
                             <h4>Bruna</h4>
                             <p>“Graças ao trabalho com  a <span>Dev Hunt</span>, consegui alcançar uma independência financeira que nunca imaginei ser possível. Agora, posso focar em projetos que realmente me apaixonam e ainda ter tempo para minha família.”</p>
                         </div><!--depoimentos-box-->
@@ -224,24 +224,33 @@
                     <h2>Precisa de ajuda?</h2>
                     <div class="flex">
                         <div class="p-ajuda">
+                            <i class="bi bi-code-slash"></i>
                             <h3>Procuro Freelancer</h3>
                             <p>Escolha o tipo de talento que precisa de acordo com a categoria e escopo do seu projeto.</p>
-                            <a href="#">Encontre um freelancer</a>
-                            <a href="#">Planos e preços</a>
+                            <ul>
+                                <li><a href="#">Encontre um freelance</a></li>
+                                <li><a href="#">Planos e preços<</a></li>
+                            </ul>
                         </div><!--p-ajuda-->
 
                         <div class="p-ajuda">
+                            <i class="bi bi-person-workspace"></i>
                             <h3>Quero Trabalhar</h3>
                             <p>Escolha o tipo de trabalho que está procurando de acordo com a sua profissão e disponibilidade.</p>
-                            <a href="#">Encontre um projeto</a>
-                            <a href="#">Planos e preços</a>
+                            <ul>
+                                <li><a href="#">Encontre um projeto</a></li>
+                                <li><a href="#">Planos e preços</a></li>
+                            </ul>
                         </div><!--p-ajuda-->
 
                         <div class="p-ajuda">
+                            <i class="bi bi-question-circle"></i>
                             <h3>Ajuda</h3>
                             <p>Tire suas dúvidas e receba assistência.</p>
-                            <a href="#">Central de Ajuda</a>
-                            <a href="#">Perguntas Frequentes</a>
+                            <ul>
+                                <li><a href="#">Central de Ajuda</a></li>
+                                <li><a href="#">Perguntas Frequentes</a></li>
+                            </ul>
                         </div><!--p-ajuda-->
 
                     </div><!--flex-->
