--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div class="login-container">
         <!-- Logo Dev Hunt -->
         <div class="logo-container">
-            <img src="dev_hunt_logo.png" alt="Dev Hunt Logo" class="logo">
+            <img src="/img/logo.png" alt="Dev Hunt Logo" class="logo">
         </div>
 
         <h2>Login</h2>
