--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <div class="logo">
                 <a href="#">
-                    <img src="#" alt="Dev Hunt"/>
+                    <img src="/img/logo.png" alt="Dev Hunt"/>
                 </a><!--link-logo-->
             </div><!--logo-->
 
