--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="menu-principal">
 
             <div class="logo">
-                <a href="#">
+                <a href="/index.html">
                     <img src="/img/logo.png" alt="Dev Hunt"/>
                 </a><!--link-logo-->
             </div><!--logo-->
@@ -262,7 +262,7 @@
             <div class="interface">
                 <div class="footer-1">
                     <div class="flex">
-                        <div class="logo-footer">
+                        <div class="logo">
                             <img src="/img/logo.png" alt="Dev Hunt"/>
                         </div><!--logo-footer-->
 
