--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,15 @@
-<!--administrador do site-->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style-Admin.css">
+    <title>Admin</title>
+</head>
+<body>
+    <div class="Conteiner">
+
+    </div>
+    
+</body>
+</html>
