atualiação da pg inicial

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <section class="topo-do-site">
                 <div class="interface">
                     <div class="flex">
+                        <div class="video-topo"></div>
+                            <video autoplay muted loop>
+                                <source src="https://videocdn.cdnpk.net/videos/4079dee7-bc68-4fe1-a47e-c09cd39c3c3e/horizontal/previews/clear/large.mp4?token=exp=1725847303~hmac=2da3e72a12ad05ddf1acd269c4e5a2112baa089366f184d31af07df083aaa31c" type="video/mp4">
+                            </video>
+                        </div><!---video-topo--->
                         <div class="txt-topo-site">
                             <h1>
                                 Os melhores freelancer do mercado para realizar o seu projeto!
@@ -74,9 +79,6 @@
                                 <a href="#"><button class="bnt-txt-2">Trabalhar como Freelancer</button></a><!--txt-bnt-->
                             </div><!--bdn-txt-->
                         </div><!--txt-topo-site-->
-                        <div class="img-topo-do-site">
-                            <img src="#" alt="imagem lateral ou de fundo"/>
-                        </div><!---img-topo-do-site-->
                     </div><!--flex-->
                 </div><!--interface-->
             </section><!--topo-do-site-->
@@ -113,15 +115,19 @@
                 <div class="interface">
                     <div class="flex">
                         <div class="serv-box">
-                            <i class="bi bi-briefcase-fill"></i>
-                            <p>Quero elaborar um projeto</p>
-                            <h3>Empresas</h3>
+                            <button>
+                                <i class="bi bi-briefcase-fill"></i>
+                                <p>Quero elaborar um projeto</p>
+                                <h3>Empresas</h3>
+                            </button>
                         </div><!--serv-box-->
 
                         <div class="serv-box">
-                            <i class="bi bi-code-square"></i>
-                            <p>Quero fazer parte de um projeto</p>
-                            <h3>Freelancers</h3>
+                            <button>
+                                <i class="bi bi-code-square"></i>
+                                <p>Quero fazer parte de um projeto</p>
+                                <h3>Freelancers</h3>
+                            </buttom>
                         </div><!--serv-box-->
                     </div><!--flex-->
                 </div><!--interface-->
@@ -142,35 +148,34 @@
 
             <section class="depoimentos">
                 <div class="interface">
-                    <h2>O que falam sobre a <span>Dev Hunt</span></h2>
                     <div class="flex">
 
                         <div class="depoimentos-box">
-                            <img src="/img/1.jpg" alt="foto">
+                            <img src="https://img.freepik.com/fotos-gratis/homem-com-o-laco-com-os-dedos-entrelacados_1187-2745.jpg?t=st=1725823071~exp=1725826671~hmac=dce5eac38e6e6b81b24dab7157b285c1644d78d8600d546e4cf6aa1894be529e&w=360" alt="foto">
                             <h4>Carlos</h4>
                             <p>“Trabalhar com a <span>Dev Hunt</span> foi uma experiência incrível. Eles entenderam exatamente o que eu precisava e entregaram um trabalho de alta qualidade dentro do prazo. Recomendo fortemente seus serviços!”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="/img/2.jpg" alt="foto">
+                            <img src="https://img.freepik.com/fotos-gratis/feche-de-mulher-corporativa-confiante-empresario-profissional-sorrindo-cruzando-os-bracos-no-peito-e-sorrindo-entusiasmado-de-pe-sobre-fundo-branco_1258-85600.jpg?uid=R152473397&ga=GA1.1.1007158551.1718317579&semt=ais_hybrid" alt="foto">
                             <h4>Rebeca</h4>
                             <p>“Desde que comecei a colaborar com a <span>Dev Hunt</span>, minha carreira como freelancer decolou. Eles me conectaram com clientes incríveis e projetos desafiadores que me ajudaram a crescer profissionalmente.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="/img/4.jpg" alt="foto">
+                            <img src="https://img.freepik.com/fotos-gratis/feche-de-mulher-corporativa-confiante-empresario-profissional-sorrindo-cruzando-os-bracos-no-peito-e-sorrindo-entusiasmado-de-pe-sobre-fundo-branco_1258-85600.jpg?uid=R152473397&ga=GA1.1.1007158551.1718317579&semt=ais_hybrid" alt="foto">
                             <h4>Pedro</h4>
                             <p> “A flexibilidade e o suporte oferecidos pela <span>Dev Hunt</span> são incomparáveis. Eles sempre estão disponíveis para ajudar e garantir que eu tenha tudo o que preciso para realizar meu trabalho da melhor forma possível.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="/img/3.jpg" alt="foto">
+                            <img src="https://img.freepik.com/fotos-gratis/feche-de-mulher-corporativa-confiante-empresario-profissional-sorrindo-cruzando-os-bracos-no-peito-e-sorrindo-entusiasmado-de-pe-sobre-fundo-branco_1258-85600.jpg?uid=R152473397&ga=GA1.1.1007158551.1718317579&semt=ais_hybrid" alt="foto">
                             <h4>Bruna</h4>
                             <p>“Graças ao trabalho com  a <span>Dev Hunt</span>, consegui alcançar uma independência financeira que nunca imaginei ser possível. Agora, posso focar em projetos que realmente me apaixonam e ainda ter tempo para minha família.”</p>
                         </div><!--depoimentos-box-->
 
                         <div class="depoimentos-box">
-                            <img src="/img/5.jpg" alt="foto">
+                            <img src="https://img.freepik.com/fotos-gratis/feche-de-mulher-corporativa-confiante-empresario-profissional-sorrindo-cruzando-os-bracos-no-peito-e-sorrindo-entusiasmado-de-pe-sobre-fundo-branco_1258-85600.jpg?uid=R152473397&ga=GA1.1.1007158551.1718317579&semt=ais_hybrid" alt="foto">
                             <h4>Henrique</h4>
                             <p>“A qualidade e o profissionalismo da <span>Dev Hunt</span> são excepcionais. Cada projeto é tratado com o máximo cuidado e atenção aos detalhes, resultando em entregas que superam as expectativas.”</p>
                         </div><!--depoimentos-box-->
@@ -262,7 +267,7 @@
             <div class="interface">
                 <div class="footer-1">
                     <div class="flex">
-                        <div class="logo">
+                        <div class="logo-footer">
                             <img src="/img/logo.png" alt="Dev Hunt"/>
                         </div><!--logo-footer-->
 
