--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
         <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <script src="/js/pginicial.js" defer></script>
     </head>
     <body>
         <header class="menu-principal">
