--- a/ajuda.html
+++ b/ajuda.html
@@ -1,1 +1,70 @@
-<!--Ajuda com formulário e  perguntas frequentes-->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DevHunt - Ajuda</title>
+    <link rel="stylesheet" type="text/css" href="/css/style-ajuda.css">
+</head>
+<body>
+    <header class="header">
+        <div class="logo">
+            <img src="/img/logo.png" alt="DevHunt Logo">
+            <h2>Ajuda</h2>
+        </div>
+    </header>
+
+    <main>
+        <section class="Bemvindo">
+            <h1>Olá, Estamos aqui para ajudar.</h1>
+            <div class="Barra">
+
+                <input type="text" placeholder="Como podemos ajudar?">
+                <button>🔍</button>
+            </div>
+        </section>
+
+        <section class="Links">
+            <h2>Atalhos para DevHunt</h2>
+            <div class="link">
+                <a href="#">Adicionar ou alterar e-mail</a>
+                <a href="#">Redefinir sua senha</a>
+                <a href="#">Cancelar assinatura Premium</a>
+                <a href="#">Encerrar sua conta</a>
+                <a href="#">Visibilidade do perfil</a>
+                <a href="#">Candidatar-se a projetos</a>
+            </div>
+        </section>
+
+        <section class="Recomendados">
+            <h2>Tópicos recomendados</h2>
+            <div class="topicos">
+                <div class="topico">Informações básicas</div>
+                <div class="topico">Privacidade dos Dados</div>
+                <div class="topico">Cobrança da Assinatura</div>
+                <div class="topico">Seu perfil</div>
+                <div class="topico">Conexões</div>
+                <div class="topico">Projetos e oportunidades</div>
+            </div>
+        </section>
+    </main>
+
+    <aside class="ajuda1">
+        <h2>Outras maneiras pelas quais podemos ajudar</h2>
+        <div class="ajuda2">
+            <h3>Políticas para Comunidades</h3>
+            <p>Nossas políticas garantem que você tenha uma experiência segura e profissional.</p>
+            <a href="#">Saiba mais</a>
+        </div>
+        <div class="ajuda2">
+            <h3>Central de Transparência</h3>
+            <p>A segurança da sua conta e a segurança on-line são nossas maiores prioridades.</p>
+            <a href="#">Saiba mais</a>
+        </div>
+    </aside>
+
+    <footer>
+        <p>&copy; 2024 DevHunt. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
