--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                     <a href="#"><button>Publicar Projeto</button></a>
                 </div><!--botao-topo-->
 
+                <h1>acessibilidade</h1>
+                <div class="trilho" id="trilho">
+                    <div class="indicador">
+
+                    </div><!--indicador-->
+                </div><!--trilho-->
+
             </nav><!--links-->
         </header><!--fim-menu-principal-->
 
@@ -242,7 +249,7 @@
                             <p>Escolha o tipo de talento que precisa de acordo com a categoria e escopo do seu projeto.</p>
                             <ul>
                                 <li><a href="#">Encontre um freelance</a></li>
-                                <li><a href="#">Planos e preços<</a></li>
+                                <li><a href="#">Planos e preços</a></li>
                             </ul>
                         </div><!--p-ajuda-->
 
@@ -275,10 +282,6 @@
             <div class="interface">
                 <div class="footer-1">
                     <div class="flex">
-                        <div class="logo-footer">
-                            <img src="/img/logo-2.png" alt="Dev Hunt"/>
-                        </div><!--logo-footer-->
-
                         <div class="btn-redes">
                             <a href="#"><i class="bi bi-instagram"></i></a>
                             <a href="#"><i class="bi bi-facebook"></i></a>
